FIX: Adjust color of ellipses on text wrap

--- a/common/common.scss
+++ b/common/common.scss
@@ -340,6 +340,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      color: var(--primary);
       a.title {
         color: var(--primary);
         padding: 0 !important;
